Finish v1 of website.

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
 osf_id: # your OSF ID
-research_gate_profile: # your profile on ResearchGate
+research_gate_profile: Andreas-Haselsteiner # your profile on ResearchGate
 blogger_url: # your blogger URL
 work_url: # work page URL
 keybase_username: # your keybase user name
@@ -102,7 +102,6 @@ discord_id: # your discord id (18-digit unique numerical identifier)
 
 contact_note: >
   The easiest way to reach me is email.
-
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
 # -----------------------------------------------------------------------------
